# md-similarity

./: README.md  pyproject.toml
md_similarity/: main.py
