[project]
name = "md-similarity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "environs>=14.2.0",
    "openai>=1.57.4",
    "python-frontmatter>=1.1.0",
    "rich~=14.0.0",
    "semchunk>=2.2.0",
    "sqlite-vec>=0.1.6",
    "toml>=0.10.2",
    "transformers>=4.47.0",
    "typer~=0.16.0",
]

[project.scripts]
mdsim = "md_similarity.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

